<resources>
    <string name="app_name">Anime World</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <style name="view_downloads_string">View Downloads</style>

    <plurals name="numFavorites">
        <item quantity="one">Search %d Favorite</item>
        <item quantity="other">Search %d Favorites</item>
    </plurals>

    <plurals name="updateAmount">
        <item quantity="one">There is %d update</item>
        <item quantity="other">There are %d updates</item>
    </plurals>

    <string name="updateNumber">There are %d update(s)</string>
    <string name="hadAnUpdate">%s had an update. %s</string>

    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="download">Download</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="delete_files">Delete Downloads test files from the file system and try again.</string>
    <string name="delete_title">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="view">VIEW</string>
    <string name="wifiOnly">WiFi Only</string>
    <string name="retry">RETRY</string>
    <string name="start">Start</string>
    <string name="complete_over">%1$d/%2$d</string>
    <string name="start_fetching">Click start to start fetching game files.</string>
    <string name="fetch_started">Fetching Game Files…</string>
    <string name="fetch_done">Fetching done.</string>
    <string name="fetch_failed">An error occurred whiles fetching the game files.</string>
    <string name="reset">RESET</string>
    <string name="single_download_demo">Single Download Demo</string>
    <string name="download_list_demo">Download List Demo</string>
    <string name="game_file_download_demo">Game File Download Demo</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="downloading">downloading…</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="delete_all_files">Delete Downloaded Files</string>
    <string name="file_server">FETCH FILE SERVER DEMO</string>
    <string name="downloaded_files_deleted">Downloads Files Deleted</string>
    <string name="game_download_error">An error occurred, could not get game files.</string>
    <string name="failed_multi_enqueue">Failed Multi Enqueue Demo</string>
    <string name="multi_fragment">MULTI FRAGMENT DEMO</string>
    <string name="enqueue_error">Could not enqueue this request. Check logcat.</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="animeWorldUpdate">Anime World Update %s</string>
    <string name="notNow">Not Now</string>
    <string name="gotoBrowser">Go to Browser</string>
    <string name="update">Update</string>
    <string name="updateTitle">There\'s an update! %s</string>

    <string-array name="theme_items">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>